--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/ienigmax/TodoListExpressjs#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "sqlite3": "^4.0.2"
+    "sqlite": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
